Revision history for ActiveRecord::Simple

0.21    16.01.2013
        First public release.

0.25    10.02.2013
        * Many bug fixes
        * Improved relations
        + Added test suite (see sandbox)
        + Added relation type many-to-many

0.30    10.07.2013
        * Minor bug bixes
        + Added ordering methods "order_by", "asc" and "desc"
   
0.31    11.07.2013
        * Fixes

0.32    12.07.2013 
        * Fixed typos

0.33    12.07.2013
        + [EXPERIMENTAL] Added a new method "use_smart_saving".

0.34	21.08.2013
        * Minor fixes